fix some spacing around carousel

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -56,7 +56,7 @@
 
     #tech-carousel {
       @apply mt-9;
-      height: 448px;
+      height: 560px;
     }
 
     /* #endregion */
